# CRManga-RSS

./: .breakpoints  README.md  main.py  pyproject.toml
crmanga_rss/: api.py  generator.py  views.py
crmanga_rss/templates/: base.html  index.html
