[tool.poetry]
name = "crmanga_rss"
version = "1.0.0"
description = "Giving you the subscription button you always wanted."
authors = ["Kyle Williams <kyle.anthony.williams2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rfeed = "^1.1.1"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
